# BFCD

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt  premake5.lua
BFCD/src/: Application.cpp
BFCD/src/File/: File.h
TestFiles/: TestFileOpen.txt
src/: Application.cpp
src/File/: File.cpp  File.hpp  FileHandler.cpp  FileHandler.hpp  Reader.cpp  Reader.hpp  Writer.cpp  Writer.hpp
src/File/Compression/: Huffman.cpp  Huffman.hpp
src/File/Compression/DataStructure/HuffmanTree/: HuffmanTree.cpp  HuffmanTree.hpp  Node.cpp  Node.hpp
